--- a/index.html
+++ b/index.html
@@ -107,14 +107,28 @@
           </button>
           <a href="" class="link ms-4 d-none">See My Work</a>
         </div>
-        <div class="col-10 col-md-4 d-none d-md-block">
+        <!-- <div class="col-10 col-md-4 d-none d-md-block">
           <img src="" class="img-fluid" alt="" 
           width="200px" height="auto"
           mix-blend-mode: multiply;
           background-color : #fff;
 
           />
-        </div>
+        </div> -->
+
+ 
+<div class="col-10 col-md-4 d-none d-md-block">
+  <div class="diamond">
+    <img src="your-image.jpg" alt="Diamond Image" class="img-fluid" />
+  </div>
+</div>
+
+
+
+
+
+
+        
       </div>
     </section>
     <!-- home section ends here -->
