--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
  
 <div class="col-10 col-md-4 d-none d-md-block">
   <div class="diamond">
-    <img src="your-image.jpg" alt="Diamond Image" class="img-fluid" />
+    <img src="anju.jpg" alt="Diamond Image" class="img-fluid" />
   </div>
 </div>
 
